hphp/test/zend/good/ext/standard/tests/array/bug40191.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('spl')) die("skip SPL is not available");
}
